--- a/AppWidget/gradle/wrapper/gradle-wrapper.properties
+++ b/AppWidget/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat Apr 12 06:15:27 AM EDT 2025
+#Sun Apr 20 03:57:11 EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.11.1-all.zip
 distributionPath=wrapper/dists
