--- a/DownloadableFonts/gradle/wrapper/gradle-wrapper.properties
+++ b/DownloadableFonts/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat Apr 12 06:40:11 AM EDT 2025
+#Sun Apr 20 04:17:01 EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
