--- a/BasicImmersiveMode/gradle/wrapper/gradle-wrapper.properties
+++ b/BasicImmersiveMode/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun May 11 03:28:15 EDT 2025
+#Sat May 24 06:20:27 AM EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
