--- a/WindowInsetsAnimation/gradle/wrapper/gradle-wrapper.properties
+++ b/WindowInsetsAnimation/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon May 12 03:50:48 EDT 2025
+#Sun May 25 05:50:18 AM EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.14-all.zip
