--- a/DragAndDropAcrossApps/gradle/wrapper/gradle-wrapper.properties
+++ b/DragAndDropAcrossApps/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sun May 25 03:49:16 EDT 2025
+#Sat Jun  7 06:00:07 AM EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.14-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.14.1-all.zip
