--- a/DragAndDropAcrossApps/gradle/wrapper/gradle-wrapper.properties
+++ b/DragAndDropAcrossApps/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sat Jun  7 06:00:07 AM EDT 2025
+#Tue Jun 24 05:08:38 EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.14.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.14.2-all.zip
