--- a/ElevationBasic/gradle/wrapper/gradle-wrapper.properties
+++ b/ElevationBasic/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Jun 24 06:40:47 AM EDT 2025
+#Wed Jul  9 03:06:57 EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
