--- a/EmojiCompat/gradle/wrapper/gradle-wrapper.properties
+++ b/EmojiCompat/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Jun 24 07:14:21 AM EDT 2025
+#Wed Jul  9 03:23:15 EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
