--- a/People/gradle/wrapper/gradle-wrapper.properties
+++ b/People/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed Jun 25 03:07:03 EDT 2025
+#Wed Jul  9 05:13:23 AM EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
