--- a/TextStyling/gradle/wrapper/gradle-wrapper.properties
+++ b/TextStyling/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu Jul 10 02:54:27 EDT 2025
+#Thu Jul 24 05:48:50 AM EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.14.3-all.zip
