--- a/WindowManager/gradle/wrapper/gradle-wrapper.properties
+++ b/WindowManager/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu Jul 10 03:32:06 EDT 2025
+#Thu Jul 24 06:37:15 AM EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.14.3-all.zip
