--- a/PreferencesKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/PreferencesKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Aug  5 04:10:04 EDT 2025
+#Sun Aug 17 07:04:33 AM EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
