--- a/WindowInsetsAnimation/gradle/wrapper/gradle-wrapper.properties
+++ b/WindowInsetsAnimation/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Aug  5 06:21:59 AM EDT 2025
+#Mon Aug 18 03:29:54 EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl= https\://services.gradle.org/distributions/gradle-9.0.0-all.zip
