--- a/AppWidget/gradle/wrapper/gradle-wrapper.properties
+++ b/AppWidget/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Aug 22 06:41:09 AM EDT 2025
+#Tue Sep  2 05:40:55 EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-9.0.0-all.zip
 distributionPath=wrapper/dists
