--- a/DownloadableFontsKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/DownloadableFontsKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Aug 22 08:11:13 AM EDT 2025
+#Wed Sep  3 03:40:08 EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
