--- a/EmojiCompatKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/EmojiCompatKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Aug 17 03:58:42 EDT 2025
+#Wed Sep  3 06:59:56 AM EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
