--- a/People/gradle/wrapper/gradle-wrapper.properties
+++ b/People/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Aug 17 06:19:46 AM EDT 2025
+#Thu Sep  4 03:23:45 EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
