--- a/AppWidget/gradle/wrapper/gradle-wrapper.properties
+++ b/AppWidget/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu Oct  2 03:25:59 EDT 2025
+#Thu Oct 16 07:38:26 AM EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-9.1.0-all.zip
 distributionPath=wrapper/dists
