--- a/DocumentCentricApps/gradle/wrapper/gradle-wrapper.properties
+++ b/DocumentCentricApps/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Oct 17 03:34:32 EDT 2025
+#Mon Oct 27 06:51:43 AM EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
