--- a/EmojiCompat/gradle/wrapper/gradle-wrapper.properties
+++ b/EmojiCompat/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Oct 17 04:14:41 EDT 2025
+#Mon Oct 27 08:07:47 AM EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
