--- a/TextStyling/gradle/wrapper/gradle-wrapper.properties
+++ b/TextStyling/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Oct 17 07:22:33 AM EDT 2025
+#Tue Oct 28 03:51:30 EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-9.1.0-all.zip
